# kifs-raymarching

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: application.rs  data.rs  error.rs  graphics.rs  lib.rs  main.rs  math.rs  packed.rs  render.rs  scene.rs  shader.wgsl  uniform.rs  util.rs
src/data/: buffer.rs  packed.rs  scene.rs  uniform.rs
src/render/: graphics.rs  gui.rs
src/shaders/: gen_julia.wgsl  julia.wgsl  kifs.wgsl  main.wgsl  primitives.wgsl  shader.wgsl
src/shaders/dependencies/: bindings.wgsl  entry.wgsl  quaternions.wgsl
src/util/: buffer.rs  error.rs  math.rs  shader.rs  uniform.rs
