[package]
name = "kifs-raymarching"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.22.0", features = ["derive"] }
egui = "0.31.1"
egui-wgpu = { version = "0.31.1",features = ["winit"] }
env_logger = "0.11.8"
log = "0.4.27"
pollster = "0.4"
winit = { version = "0.30.9", features = ["rwh_06"] }