[package]
name = "kifs-raymarching"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.22.0", features = ["derive"] }
egui = "0.31.1"
egui-wgpu = { version = "0.31.1",features = ["winit"] }
egui-winit = "0.31.1"
env_logger = "0.11.8"
log = "0.4.27"
num-traits = "0.2.19"
num-derive = "0.4.2"
pollster = "0.4.0"
winit = { version = "0.30.9", features = ["rwh_06"] }